# Django-Admin-Column-Toggle

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
column_toggle/: admin.py
column_toggle/static/column_toggle/: column_toggle.css  column_toggle.js
column_toggle/templates/column_toggle/: change_list.html  column_toggle.html
